--- a/assets/css/kbstyle.css
+++ b/assets/css/kbstyle.css
@@ -2,8 +2,13 @@
     --color-one: #717171;
     --color-two: #2e95c3;
 	--color-bodybg: #f7f7f7;
-	--primary-gradient: linear-gradient(to right, var(--color-two), var(--color-one));}
-
+	--primary-gradient: linear-gradient(to right, var(--color-two), var(--color-one));
+}
+.logo{
+	color: white;
+	font-weight: bolder;
+    font-size: x-large;
+}
 .text-color-one {
     color: var(--color-one);
 }
